[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme/airbroomball_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/league-gameover/LeagueGameover.gd" type="Script" id=2]
[ext_resource path="res://assets/font/DSEG7ClassicMini-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/broomballcoin.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 4 )

[node name="Gameover" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 360.0
margin_top = 500.0
margin_right = 360.0
margin_bottom = 500.0
rect_scale = Vector2( 0.36, 0.36 )
theme = ExtResource( 1 )
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_left = -584.0
margin_top = -149.0
margin_right = 584.0
margin_bottom = 149.0

[node name="Panel" type="Panel" parent="CenterContainer/MarginContainer"]
margin_right = 1168.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MarginContainer"]
margin_right = 1168.0
margin_bottom = 298.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1118.0
margin_bottom = 248.0
custom_constants/separation = 70
alignment = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 1068.0
custom_constants/vseparation = 40
columns = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 1068.0
margin_bottom = 198.0
custom_constants/separation = 32
alignment = 1

[node name="CoinsStats" type="HBoxContainer" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1068.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 225, 69 )
custom_constants/separation = 41
alignment = 1

[node name="GoalStats" type="Label" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/CoinsStats"]
margin_top = 20.0
margin_right = 540.0
margin_bottom = 107.0
text = "5 x 50 - 2 x 25 ="
align = 1

[node name="Coins" type="Label" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/CoinsStats"]
margin_left = 581.0
margin_top = 4.0
margin_right = 899.0
margin_bottom = 124.0
rect_pivot_offset = Vector2( 159, 60 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "000 "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/CoinsStats"]
margin_left = 940.0
margin_right = 1068.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 5 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -330.0
margin_top = 376.5
margin_right = 330.0
margin_bottom = 471.5
size_flags_horizontal = 0

[node name="GoBack" type="Button" parent="Buttons"]
margin_right = 660.0
margin_bottom = 95.0
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="." to="." method="_on_Gameover_visibility_changed"]
[connection signal="pressed" from="Buttons/GoBack" to="." method="_on_GoBack_pressed"]
